# Othello_Game

./: .gitignore  .gitlab-ci.yml  AUTHORS.md  CMakeLists.txt  README.md  diagrame.odg
src/: Doxyfile  Game.cpp  Game.hpp  Game_test.cpp  main.cpp  main_test.cpp
